<resources>
    <string name="app_name">Ivoxis</string>
    <string name="update_app_error">"Actualización fallida, por favor reintente la próxima vez que lance la aplicación."</string>
    <string name="update_app_downloaded">Una actualización ha sido descargada</string>
    <string name="update_app_restart">REINICIAR</string>
    <string name="password">Contraseña</string>
    <string name="decline">Declinar</string>
    <string name="confirm">Confirmar</string>
    <string name="done">Listo</string>
    <string name="next">Siguiente</string>
    <string name="close">Cerrar</string>
    <string name="cancel">Cancelar</string>
    <string name="back_up">Respaldar</string>
    <string name="reset_wallet">Reiniciar cartera</string>
    <string name="words_loading_error">No se pudo cargar la lista de palabras</string>
    <string name="enter_recovery_phrase_title">Ingrese su\nfrase de \nrecuperación</string>
    <string name="enter_recovery_phrase_hint">Palabras separadas por espacios</string>
    <string name="enter_recovery_phrase_error">Frase de recuperación incorrecta</string>
    <string name="enter_private_key_title">Ingrese su\nllave \nprivada</string>
    <string name="enter_private_key_description">La llave privada es confidencial y es obtenida al momento de crear su cartera.</string>
    <string name="enter_private_key_description2">Asegúrese de mantener su llave privada de manera confidencial.</string>
    <string name="enter_private_key_hint">Llave privada</string>
    <string name="enter_private_key_error">Llave privada incorrecta</string>
    <string name="pick_password_title">Ingresa una\ncontraseña</string>
    <string name="pick_password_description">De modo que nadie pueda desbloquear su cartera.</string>
    <string name="pick_password_description2">Las mejores contraseñas son largas y contienen letras, números y caracteres especiales.</string>
    <string name="pick_password_strength_weak">Débil</string>
    <string name="pick_password_strength_so_so">So-so</string>
    <string name="pick_password_strength_good">Bien</string>
    <string name="pick_password_strength_great">Fabuloso</string>
    <string name="password_again_title">Escriba su\ncontraseña de nuevo</string>
    <string name="password_again_description"><![CDATA[No habra botón <u>‘Restaurar contraseña’</u>. Asegúrese de recordarla.]]></string>
    <string name="password_again_error">Contraseña incorrecta</string>
    <string name="lets_double_check_title">Verifiquemos \nde nuevo</string>
    <string name="lets_double_check_description">Una vez que termine no verá su frase de recuperación de nuevo.</string>
    <string name="lets_double_check_item_title">Selecciona la palabra #%d</string>
    <string name="prepare_write_title">Prepárese para escribir su frase de recuperación</string>
    <string name="prepare_write_description">Si su dispositivo se pierde usted podrá usar su frase de recuperación para recuperar su cartera.</string>
    <string name="prepare_write_confirm">Inicio</string>
    <string name="wallet_backed_up_title">Su cartera está\nrespaldada</string>
    <string name="wallet_backed_up_description">Proteja su frase con recelo, en un mundo des-centralizado la seguridad es primero</string>
    <string name="wallet_status_connected">Conectado a Ivox</string>
    <string name="wallet_status_disconnect">Desconectar</string>
    <string name="wallet_header_search_hint">Buscar %d tokens</string>
    <string name="wallet_empty">Esta cartera no tiene\nningun token</string>
    <string name="intro_by_mew_label">por Ivox Coin</string>
    <string name="intro_verify">Verificar</string>
    <string name="intro_restore_wallet_mnemonic">Frases mnemonicas</string>
    <string name="intro_restore_wallet_private_key">Llave privada</string>
    <string name="intro_setup">CREAR CARTERA NUEVA</string>
    <string name="intro_page_footer1">Energía sustentable para todos\ninvierta fácilmente.\nPor Ivox Coin</string>
    <string name="intro_page_footer2">Una cartera de \nEthereum\nque permite almacenar\ntokens de Ivox</string>
    <string name="intro_page_footer3">De manera sencilla compre\ny gestione sus tokens\nde forma segura</string>
    <string name="intro_page_footer4">Incluya en sus planes\nla inversión en energía sustentable\nde alto impacto.</string>
    <string name="intro_page_footer5">Sin colección de datos:\nIvox no puede\ncolectar sus datos privados\nsin su consentimiento.</string>
    <string name="intro_page_footer6">Tecnología de punta\n\nIvoxis de\nIvox Coin cuenta con la\nmejor tecnología.</string>
    <string name="intro_page_footer7">Transparente, claro y \nconciso. Aprobado por\nla comunidad.</string>
    <string name="generating_start_using">Comenzar a usar Ivoxis</string>
    <string name="wallet_card_currency_eth">IVOX TOKEN</string>
    <string name="wallet_card_currency_usd">USD</string>
    <string name="wallet_card_currency_mxn">MXN</string>
    <string name="wallet_card_address_title">Su dirección pública de Ethereum</string>
    <string name="wallet_card_stock_price">\@ %.2f</string>
    <string name="wallet_card_backup_title">Acción requerida: sin respaldar</string>
    <string name="wallet_card_backup_description">Si pierde este dispositvo, perderá su dirección y fondos para siempre.</string>
    <string name="wallet_card_backed_up">Respaldado</string>
    <string name="wallet_toolbar_buy_ether">Comprar</string>
    <string name="wallet_header_balances_title">Tokens</string>
    <string name="wallet_network_title">Seleccionar red</string>
    <string name="wallet_network_main_full">Red Principal De Ethereum</string>
    <string name="wallet_network_ropsten_full">Red de prueba Ropsten</string>
    <string name="wallet_network_rinkeby_full">Red de prueba Rinkeby</string>
    <string name="wallet_network_main_short">Mainnet</string>
    <string name="wallet_network_ropsten_short">Ropsten</string>
    <string name="wallet_network_rinkeby_short">Rinkeby</string>
    <string name="wallet_network_main_currency">IVOX TOKEN</string>
    <string name="wallet_network_ropsten_currency">ROPSTEN ETH</string>
    <string name="wallet_network_rinkeby_currency">RINKEBY ETH</string>
    <string name="wallet_scan_to_connect">Escanear para conectar</string>
    <string name="wallet_offline">Sin conexión a internet</string>
    <string name="balance_method_title">Seleccione moneda</string>
    <string name="balance_method_ivox_full">IVOX TOKEN</string>
    <string name="balance_method_ivox_short">IVOX</string>
    <string name="balance_method_ether_full">ETHEREUM</string>
    <string name="balance_method_ether_short">ETHER</string>
    <string name="drawer_item_home">Inicio</string>
    <string name="drawer_item_buy">Comprar</string>
    <string name="drawer_item_tokens">Tokens</string>
    <string name="drawer_item_ether">Ether</string>
    <string name="drawer_item_transfer">Transferir</string>
    <string name="drawer_item_info">Información</string>
    <string name="drawer_item_data">Datos</string>
    <string name="drawer_item_details">Detalles</string>
    <string name="scan_camera_permission_rationale_settings">Habilite el acceso a la cámara para\nIvox en Configuración</string>
    <string name="scan_camera_permission_rationale_dialog">Habilite el acceso a la cámara para\nIvox</string>
    <string name="scan_low_storage_error">Espacio insuficiente</string>
    <string name="scan_camera_source_error">No se pudo iniciar la cámara</string>
    <string name="transaction_confirmed_title">Continúe en su navegador</string>
    <string name="transaction_confirmed_description">Transaction is generated and signed. Please continue in MyEtherWallet in your browser in order to send it.</string>
    <string name="transaction_declined_title">Transaction declined</string>
    <string name="transaction_declined_description"><![CDATA[You declined the transaction and it was cancelled. If you have security concerns, please contact <a href="mail:support@myetherwallet.com">MEW Support</a>]]></string>
    <string name="confirm_transaction_title">Verificar\ntransacción</string>
    <string name="confirm_transaction_wallet_title">Verifique la dirección destino:</string>
    <string name="confirm_transaction_amount_title">Verifique la cantidad:</string>
    <string name="confirm_transaction_description">Es muy importante que verifique que la dirección concuerda y que la cantidad de tokens a enviar es correcta, ya que realizar transacciones es algo definitivo.</string>
    <string name="scan_connected">Connected to MyEtherWallet</string>
    <string name="scan_connected2">Via encrypted peer-to-peer connection</string>
    <string name="scan_toolbar_title">Scan QR code</string>
    <string name="scan_toolbar_subtitle">To connect to MyEtherWallet</string>
    <string name="scan_error">Something went wrong</string>
    <string name="scan_error_try_again">Try again</string>
    <string name="scan_error_contact">Contact support</string>
    <string name="scan_connecting">Creating a local connection\nwith MyEtherWallet</string>
    <string name="scan_manual_1"><![CDATA[Go to <b>MyEtherWallet.com</b> on your<br/>computer and choose <b>Send Ether and<br/>Tokens</b> option.]]></string>
    <string name="scan_manual_2"><![CDATA[Select <b>MEWconnect</b> option on <b>How<br/>would you like to access your wallet</b><br/>screen.]]></string>
    <string name="scan_manual_3"><![CDATA[Click <b>Access with MEWconnect</b> and scan<br/>the QR code on the screen that will follow.]]></string>
    <string name="auth_forgot_password">¿Olvidó su contraseña?</string>
    <string name="auth_forgot_password_error">Contraseña incorrecta</string>
    <string name="forgot_password_title">¿Olvidó su contraseña?</string>
    <string name="forgot_password_description">Desafortunadamente, como lo habiamos mencionado cuando se generó la contraseña, no hay opción para recuperar la contraseña, si usted generó un respaldo puede usar su lista de frases para restaurar su cartera y establecer una nueva contraseña.</string>
    <string name="forgot_password_restore_wallet">Restaurar cartera</string>
    <string name="write_these_title">Anote</string>
    <string name="write_these_subtitle">Esta es su lista de frases y llave privada:</string>
    <string name="write_these_description">Resista la tentación de enviársela por correo o tomarle una captura de pantalla.</string>
    <string name="write_these_screenshot_text">No mantenga sus frases de recuperación de manera digital, anótelas en papel.</string>
    <string name="write_these_screenshot_title">Oops! Parece que ha tomado una captura de pantalla.</string>
    <string name="register_name_error">Nombre inválido</string>
    <string name="register_phone_error">Número de teléfono inválido</string>
    <string name="register_password_error">Contraseña incorrecta</string>
    <string name="register_email_error">Email inválido</string>
    <string name="register_card_error">Número de tarjeta de crédito inválido</string>
    <string name="register_user_error">Un usuario ya se ha registrado con ese email</string>
    <string name="register_server_error">Error en el servidor</string>
    <string name="back_up_wallet_title">Respalde su cartera</string>
    <string name="amount_to_transfer">Cantidad</string>
    <string name="wallet_to_transfer">Cartera destino</string>
    <string name="user_register_name">Nombre completo</string>
    <string name="user_register_email">Email</string>
    <string name="user_register_phone">Teléfono</string>
    <string name="user_register_address">Domicilio</string>
    <string name="user_register_country">País</string>
    <string name="user_register_credit_card">Número de tarjeta de crédito</string>
    <string name="update_register_user_view">Ver tarjeta</string>
    <string name="update_user_title">Actualizar datos</string>
    <string name="update_user_update">Actualizar</string>
</resources>