<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/default_window_background_general"
    android:orientation="vertical">

    <com.myetherwallet.mewconnect.core.ui.view.StaticToolbar
        android:id="@+id/enter_private_key_toolbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/static_toolbar_height" />

    <ScrollView
        android:id="@+id/enter_private_key_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/enter_private_key_content_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_24dp"
            android:layout_marginEnd="@dimen/dimen_24dp"
            android:fitsSystemWindows="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/enter_private_key_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingExtra="-8sp"
                android:text="@string/pick_password_title"
                android:textColor="@color/blue"
                android:textSize="@dimen/text_size_40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/enter_private_key_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:letterSpacing="0.01"
                android:text="@string/pick_password_description"
                android:textColor="@color/text_black"
                android:textSize="@dimen/text_size_18sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/enter_private_key_input_layout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12dp"
                android:hint="@string/enter_private_key_hint"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorAccent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/enter_private_key_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:letterSpacing="0.01"
                android:lineSpacingExtra="6sp"
                android:text="@string/enter_private_key_description2"
                android:textColor="@color/text_grey"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>