<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_background"
    android:orientation="vertical">


    <android.support.v7.widget.Toolbar
        android:id="@+id/transaction_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="20dp"
        app:title="@string/drawer_item_transfer"
        app:titleTextColor="@color/white"/>

    <LinearLayout
        android:id="@+id/info_content_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/confirm_transfer_tokens"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="250dp"
                android:layout_height="64dp"
                android:layout_marginStart="48dp"
                android:layout_marginTop="320dp"
                android:padding="10dp"
                android:shape="rectangle"
                android:text="Confirmar" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="64dp"
                        android:layout_marginLeft="64dp"
                        android:layout_gravity="right"
                        android:text="@string/amount_to_transfer"
                        android:textSize="@dimen/text_size_16sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="82dp"
                        android:layout_gravity="right"

                        android:text="@string/wallet_to_transfer"
                        android:textAlignment="center"
                        android:textSize="@dimen/text_size_16sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fitsSystemWindows="true"

                    android:layout_marginLeft="135dp"

                    android:orientation="vertical">

                    <EditText
                        android:id="@+id/transfer_amount"

                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="64dp"
                        android:layout_gravity="left"
                        android:inputType="numberDecimal"

                        android:textSize="@dimen/text_size_16sp" />

                    <EditText
                        android:id="@+id/transfer_wallet"

                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="56dp"
                        android:layout_gravity="left"
                        android:inputType="text"
                        android:textSize="@dimen/text_size_16sp" />

                </LinearLayout>
        </RelativeLayout>

    </LinearLayout>


</LinearLayout>